# fiskta

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  LOGICAL_OPERATORS.md  Makefile  README.md  benchmark.sh  build.sh  build.zig  build.zig.zon  cmd  feedback.txt  fiskta_program_design.md  fiskta_programs.txt  fuzz.lua  fuzz.py  fuzz.sh  mem_suggestions.txt  regex-dollar-bug.txt  test.py  todo  todo.txt
cmake/: ClangTidy.cmake
src/: arena.h  cli_help.c  cli_help.h  engine.c  engine.h  error.c  error.h  fiskta.h  iosearch.c  iosearch.h  main.c  parse.c  parse.h  parse_plan.h  reprog.c  reprog.h  runtime.c  runtime.h  util.c  util.h
tests/: BENCHMARK_README.md  ab_performance_impact.sh  analyze_performance_features.sh  benchmark.sh  benchmark_analysis.py  benchmark_configs.sh  convert_tests_to_lua.py  detect_regression.sh  edge_cases.sh  fiskta_fuzz.lua  grouped_quantifier_regression_tests.py  honest_performance_analysis.sh  minimal_benchmark.sh  performance_analysis.sh  performance_features.sh  run_tests.lua  run_tests.py  simple_benchmark.sh  test_edge_cases.py  tests_generated.lua  tests_suite.lua
